--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 20px; 
-    color: maroon;
+    color: white;
+    background-color: darkslategray;
 }
