Added: rounded buttons, button color, background color, borders, mutliple fonts

--- a/index.css
+++ b/index.css
@@ -2,5 +2,30 @@ body {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 25px; 
     color: white;
-    background-color: darkslategray;
+    background-color: #292929
+}
+
+button {
+    background-color: #B63356;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 12px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+button:hover {
+    background-color: gray;
+}
+
+p {
+    border: 2px solid white;
+    border-radius: 8px;
+    background-color:  #B63356;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
